# wadachi

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
examples/: basic.rs
src/: activity.rs  event.rs  filtering.rs  lib.rs
wadachi/: Cargo.toml
wadachi/examples/: basic.rs
wadachi/src/: event.rs  filtering.rs  lib.rs
