[package]
name = "wadachi"
version = "0.1.0"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.5.0", features = ["attributes"] }
scraper = { version = "0.12.0" }
surf = "2.1.0"
regex = "1.4.2"
chrono = "0.4.19"
