[package]
name = "wadachi"
version = "0.1.0-beta.0"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"
license = "MIT"
description = "wadachi scrapes your GitHub Activities"
homepage = "https://github.com/TaKO8Ki/wadachi"
repository = "https://github.com/TaKO8Ki/wadachi"
documentation = "https://docs.rs/wadachi"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.5.0", features = ["attributes"] }
scraper = { version = "0.12.0" }
surf = "2.1.0"
regex = "1.4.2"
chrono = "0.4.19"
